Fix spacing between rows of Sponsors, Exhibitors.

--- a/httpdocs/sites/all/themes/custom/scale12x/css/style.css
+++ b/httpdocs/sites/all/themes/custom/scale12x/css/style.css
@@ -8230,8 +8230,12 @@ div.password-suggestions ul {
 }
 .view-exhibitors .views-row,
 .view-sponsors-12x .views-row {
-  margin-bottom: 40px;
+  padding: 40px;
   clear: both;
+}
+.view-exhibitors .views-row-first,
+.view-sponsors-12x .views-row-first {
+  padding: 0;
 }
 .view-exhibitors .views-field,
 .view-sponsors-12x .views-field {
