--- a/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
+++ b/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
@@ -33,8 +33,11 @@ body {
 .view-exhibitors,
 .view-sponsors-12x {
   .views-row {
-    margin-bottom: 40px;
+    padding: 40px;
     clear: both;
+  }
+  .views-row-first {
+    padding: 0;
   }
   .views-field {
     margin-bottom: 10px;
